--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A social network and script trading platform for Developers, DevOps Engineers, Cybersecurity Engineers, and more...",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "author": "Timothy Keaveny",
   "license": "MIT",
@@ -12,8 +14,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
+    "mongoose-float": "^1.0.3",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
